fix overlap

--- a/ui_components/src/travel/Travel.css
+++ b/ui_components/src/travel/Travel.css
@@ -174,6 +174,7 @@
     animation-delay: 5s;
     animation-fill-mode: forwards;
     white-space: pre;
+    z-index: 11;
 }
 
 .travel-messages {
@@ -337,7 +338,6 @@
     flex-flow: row wrap;
     justify-content: flex-start;
     position: relative;
-    z-index: 10;
     background: var(--theme-content-darker-bg-color);
     border: 1px solid var(--travel-background-color);
 }
